--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@ node_modules/
 build/
 dist/
 
-# Local environment variables
-.env
-.env.local
-.env.*.local
+# # Local environment variables
+# .env
+# .env.local
+# .env.*.local
 
 # Logs
 npm-debug.log*
