--- a/.env
+++ b/.env
@@ -61,7 +61,7 @@ PUBLIC_URL="/"
 # you need to pass to the database instance.
 
 DB_CLIENT="sqlite3"
-DB_FILENAME="D:\Al Huda Center\alhuda-center\data.db"
+DB_FILENAME="C:\alhuda-center\data.db"
 
 
 ####################################################################################################
